--- a/Vanp.Web/Views/Account/Login.cshtml
+++ b/Vanp.Web/Views/Account/Login.cshtml
@@ -19,7 +19,7 @@
                     <h3 style="margin-bottom: 20px;">Đăng nhập</h3>
                     <div class="alert alert-danger" style="display:none">
                         <button class="close" data-close="alert"></button>
-                        <span> Vui lòng nhập tài khoản và mật khẩu.  </span>
+                        <span>@ViewData["Failure"]</span>
                     </div>
                     <div class="login-form">
                         <div class="input-box">
