--- a/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
@@ -44,7 +44,7 @@
             <li class="nav-item  ">
                 <a href="javascript:;" class="nav-link nav-toggle">
                     <i class="icon-refresh"></i>
-                    <span class="title">Chuyển Đổi Loại Tài Khoản</span>
+                    <span class="title">Gửi Yêu Cầu Đăng Sản Phẩm</span>
                 </a>
             </li>
             <li class="heading">
