--- a/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
@@ -20,14 +20,14 @@
                 <div class="sidebar-user">
                     <img src="~/images/users/admin.jpg" class="avartar img-circle" />
                     <div class="username">
-                        ADMIN
+                        @CurrentUser.FullName
                     </div>
                     <div class="role">
-                        Admin
+                        @CurrentUser.Roles
                     </div>
                     <div class="">
                         <a class="nav-link" href="/"><i class="icon-home"></i></a> <span style="margin : 0 7px">\</span>
-                        <a class="nav-link" href="@Url.Action("Logout","Account")"><i class="icon-logout"></i></a>
+                        <a class="nav-link" href="/logout"><i class="icon-logout"></i></a>
                     </div>
                 </div>
                 <!-- END RESPONSIVE QUICK SEARCH FORM -->
