Add view products
show all product

--- a/Vanp.Web/Views/Shared/_Layout.cshtml
+++ b/Vanp.Web/Views/Shared/_Layout.cshtml
@@ -89,7 +89,7 @@
                         <li class="level0 nav-6 level-top drop-menu">
                             <a class="level-top" href="#"> <span>Pages</span> </a>
                             <ul class="level1">
-                                <li class="level2 first"><a href="../left_bar.html"><span>Left Sidebar</span></a> </li>
+                                <li class="level2 first"><a href="../left_bar.html"><span>Đấu giá</span></a> </li>
                                 <li class="level2 first"><a href="../right_bar.html"><span>Right Sidebar</span></a> </li>
                                 <li class="level2 first"><a href="../full_width_bar.html"><span>Full Width</span></a> </li>
                                 <li class="level2 nav-10-2"> <a href="../list.html"> <span>List</span> </a> </li>
