--- a/Vanp.Web/Views/Account/Login.cshtml
+++ b/Vanp.Web/Views/Account/Login.cshtml
@@ -16,10 +16,11 @@
                 method="post"  name="popup-newsletter" class="email-form login-form">
                 <div class="div-left"> <img alt="newsletter" src="~/images/newsletter.jpg"></div>
                 <div class="div-right">
-                    <h3 style="margin-bottom: 20px;">Đăng nhập</h3>
+                    <h3 style="margin-bottom: 20px;" class="pull-left">Đăng nhập</h3>
+                    <h6 style="margin-bottom: 20px;" class="pull-right"><a href="/forgotpassword">Quên mật khẩu?</a></h6>
                     <div class="alert alert-danger" style="display:none">
                         <button class="close" data-close="alert"></button>
-                        <span> Vui lòng nhập tài khoản và mật khẩu.  </span>
+                        <span>@ViewData["Failure"]</span>
                     </div>
                     <div class="login-form">
                         <div class="input-box">
