--- a/Vanp.Web/Views/Account/ResetPassword.cshtml
+++ b/Vanp.Web/Views/Account/ResetPassword.cshtml
@@ -1,42 +1,36 @@
-﻿@model Vanp.Web.Models.ResetPasswordViewModel
+﻿
 @{
-    ViewBag.Title = "Reset password";
+    ViewBag.Title = "Quên mật khẩu?";
 }
-
-<h2>@ViewBag.Title.</h2>
-
-@using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Reset your password.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.Code)
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+<div class="main-container col2-right-layout">
+    <div class="main container">
+        <div class="row">
+            <section class="col-md-offset-3 col-md-6 wow bounceInUp animated">
+                <div class="col-main">
+                    <div class="page-title">
+                        <h2>Quên mật khẩu</h2>
+                    </div>
+                    <div class="static-contain">
+                        <form class="comment-form register-form" action="@Url.Action("ResetPassword", "Account")" method="post">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <p>Mật khẩu <span>*</span></p>
+                                    <p class="comment-form-email"><input id="password" name="password" value="" size="50" type="password"></p>
+                                </div>
+                                <div class="col-md-6">
+                                    <p>Xác nhận mật khẩu <span>*</span></p>
+                                    <p class="comment-form-email"><input id="repassword" name="repassword" value="" size="50" type="password"></p>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <p class="form-submit text-center">
+                                    <input name="btnSubmit" class="btn btn-secondary mt-ladda-btn" value="Thay Đổi Mật Khẩu" type="submit">
+                                </p>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Reset" />
-        </div>
-    </div>
-}
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+</div>
