--- a/Vanp.Web/Areas/Customer/Views/User/UserProfile.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/User/UserProfile.cshtml
@@ -8,7 +8,7 @@
             <span class="caption-subject text-uppercase ">Thông tin tài khoản</span>
         </div>
         <ul class="nav nav-tabs">
-            <li class="@(ViewBag.Tab == "" ? "active" : ""  )">
+            <li class="@(string.IsNullOrEmpty(ViewBag.Tab)? "active" : ""  )">
                 <a href="/account/profile">Thông Tin Cá Nhân</a>
             </li>
             <li class="@(ViewBag.Tab == "avartar" ? "active" : ""  )">
@@ -22,7 +22,7 @@
     <div class="portlet-body">
         <div class="tab-content">
             <!-- PERSONAL INFO TAB -->
-            <div class="tab-pane @(ViewBag.Tab == "" ? "active" : ""  ) " id="tab_1_1">
+            <div class="tab-pane @(string.IsNullOrEmpty(ViewBag.Tab) ? "active" : ""  ) " id="tab_1_1">
                 <form class="comment-form change-form" method="post" action="/account/profile">
                     <div class="alert alert-danger" style="display:none">
                         <button class="close" data-close="alert"></button>
@@ -42,7 +42,7 @@
                         <div class="col-md-6">
                             <p>Ngày sinh <span>*</span></p>
                             <p class="comment-form-email">
-                                <input id="dateofbirth" name='@(!Model.DateOfBirth.HasValue ? "" : Model.DateOfBirth.Value.ToString("dd/MM/yyyy"))' value="" placeholder="dd/MM/yyyy" size="30" type="text">
+                                <input id="dateofbirth" value='@(!Model.DateOfBirth.HasValue ? DateTime.Now : Model.DateOfBirth.Value)' name="dateofbirth" placeholder="dd/MM/yyyy" size="30" type="text">
                             </p>
                         </div>
                         <div class="col-md-6">
