--- a/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
@@ -57,7 +57,12 @@
                     <span class="title">Quản Lý Sản Phẩm</span>
                 </a>
             </li>
-
+            <li class="nav-item  ">
+                <a href="/product/insertproduct" class="nav-link nav-toggle">
+                    <i class="fa fa-buysellads"></i>
+                    <span class="title">Đăng bán</span>
+                </a>
+            </li>
             <li class="heading">
                 <h3 class="uppercase">Pages</h3>
             </li>
