--- a/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
@@ -36,13 +36,13 @@
                 <h3 class="text-uppercase">Tài khoản</h3>
             </li>
             <li class="nav-item active ">
-                <a href="javascript:;" class="nav-link nav-toggle">
+                <a href="/account/profile" class="nav-link nav-toggle">
                     <i class="icon-user"></i>
                     <span class="title">Thông Tin Tài Khoản</span>
                 </a>
             </li>
             <li class="nav-item  ">
-                <a href="javascript:;" class="nav-link nav-toggle">
+                <a href="/account/sendrequest" class="nav-link nav-toggle">
                     <i class="icon-refresh"></i>
                     <span class="title">Gửi Yêu Cầu Đăng Sản Phẩm</span>
                 </a>
