--- a/Vanp.Web/Areas/Customer/Views/User/SendRequest.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/User/SendRequest.cshtml
@@ -1,6 +1,6 @@
-﻿@model Vanp.Web.Models.AccountModel
+﻿
 
-@model Vanp.Web.Models.RegisterModel
+@model Vanp.Web.Models.RequestModel
 @{
     ViewBag.Title = "Gửi yêu cầu đăng sản phẩm";
 }
@@ -11,7 +11,12 @@
         </div>
     </div>
     <div class="portlet-body">
-        <textarea name="requestContent" id="requestContext" maxlength="200" placeholder="Tối thiểu 20 ký tự"></textarea>
+        <form method="post" action="/account/sendrequest" name="sendrequest"class="send-request-form"> 
+            <p>Nội dung (*)</p>
+            <p><textarea name="requestContent" id="requestContext" maxlength="200" placeholder="Tối thiểu 20 ký tự"></textarea></p>
+            <p class="form-submit"><input name="btnSubmit" id="submit" class="btn btn-secondary mt-ladda-btn" value="Gửi Yêu Cầu" type="submit">  </p>
+        </form>
+
     </div>
 </div>
 @section Scripts {
