--- a/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
@@ -20,14 +20,14 @@
                 <div class="sidebar-user">
                     <img src="~/images/users/admin.jpg" class="avartar img-circle" />
                     <div class="username">
-                        ADMIN
+                        @CurrentUser.FullName
                     </div>
                     <div class="role">
-                        Admin
+                        @CurrentUser.Roles
                     </div>
                     <div class="">
                         <a class="nav-link" href="/"><i class="icon-home"></i></a> <span style="margin : 0 7px">\</span>
-                        <a class="nav-link" href="@Url.Action("Logout","Account")"><i class="icon-logout"></i></a>
+                        <a class="nav-link" href="/logout"><i class="icon-logout"></i></a>
                     </div>
                 </div>
                 <!-- END RESPONSIVE QUICK SEARCH FORM -->
@@ -36,15 +36,15 @@
                 <h3 class="text-uppercase">Tài khoản</h3>
             </li>
             <li class="nav-item active ">
-                <a href="javascript:;" class="nav-link nav-toggle">
+                <a href="/account/profile" class="nav-link nav-toggle">
                     <i class="icon-user"></i>
                     <span class="title">Thông Tin Tài Khoản</span>
                 </a>
             </li>
             <li class="nav-item  ">
-                <a href="javascript:;" class="nav-link nav-toggle">
+                <a href="/account/sendrequest" class="nav-link nav-toggle">
                     <i class="icon-refresh"></i>
-                    <span class="title">Chuyển Đổi Loại Tài Khoản</span>
+                    <span class="title">Gửi Yêu Cầu Đăng Sản Phẩm</span>
                 </a>
             </li>
             <li class="heading">
@@ -57,7 +57,12 @@
                     <span class="title">Quản Lý Sản Phẩm</span>
                 </a>
             </li>
-
+            <li class="nav-item  ">
+                <a href="/product/insertproduct" class="nav-link nav-toggle">
+                    <i class="fa fa-buysellads"></i>
+                    <span class="title">Đăng bán</span>
+                </a>
+            </li>
             <li class="heading">
                 <h3 class="uppercase">Pages</h3>
             </li>
