--- a/Vanp.Web/Views/Product/DetailProduct.cshtml
+++ b/Vanp.Web/Views/Product/DetailProduct.cshtml
@@ -1,9 +1,9 @@
-﻿@using Vanp.DAL.Entites
-@model Product
+﻿
 @{
     ViewBag.Title = "Trang chi tiết";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <section class="main-container col1-layout">
     <div class="main">
         <div class="container">
@@ -32,16 +32,16 @@
                                         <div class="product-img-box col-lg-5 col-sm-6 col-xs-12">
                                             <div class="new-label new-top-left"> New </div>
                                             <div class="product-image">
-                                                <div class="product-full"> <img id="product-zoom" src="~/images/products/product7.jpg" data-zoom-image="assets/images/products/product7.jpg" alt="product-image" /> </div>
+                                                <div class="product-full"> <img id="product-zoom" src="assets/images/products/product7.jpg" data-zoom-image="assets/images/products/product7.jpg" alt="product-image" /> </div>
                                                 <div class="more-views">
                                                     <div class="slider-items-products">
                                                         <div id="gallery_01" class="product-flexslider hidden-buttons product-img-thumb">
                                                             <div class="slider-items slider-width-col4 block-content">
-                                                                <div class="more-views-items"> <a href="#" data-image="assets/images/products/product7.jpg" data-zoom-image="assets/images/products/product7.jpg"> <img id="product-zoom" src="~/images/products/product7.jpg" alt="product-image" /> </a></div>
-                                                                <div class="more-views-items"> <a href="#" data-image="assets/images/products/product3.jpg" data-zoom-image="assets/images/products/product3.jpg"> <img id="product-zoom" src="~/images/products/product3.jpg" alt="product-image" /> </a></div>
-                                                                <div class="more-views-items"> <a href="#" data-image="assets/images/products/product4.jpg" data-zoom-image="assets/images/products/product4.jpg"> <img id="product-zoom" src="~/images/products/product4.jpg" alt="product-image" /> </a></div>
-                                                                <div class="more-views-items"> <a href="#" data-image="assets/images/products/product5.jpg" data-zoom-image="assets/images/products/product5.jpg"> <img id="product-zoom" src="~/images/products/product5.jpg" alt="product-image" /> </a> </div>
-                                                                <div class="more-views-items"> <a href="#" data-image="assets/images/products/product6.jpg" data-zoom-image="assets/images/products/product6.jpg"> <img id="product-zoom" src="~/images/products/product6.jpg" alt="product-image" /> </a></div>
+                                                                <div class="more-views-items"> <a href="#" data-image="assets/images/products/product7.jpg" data-zoom-image="assets/images/products/product7.jpg"> <img id="product-zoom" src="assets/images/products/product7.jpg" alt="product-image" /> </a></div>
+                                                                <div class="more-views-items"> <a href="#" data-image="assets/images/products/product3.jpg" data-zoom-image="assets/images/products/product3.jpg"> <img id="product-zoom" src="assets/images/products/product3.jpg" alt="product-image" /> </a></div>
+                                                                <div class="more-views-items"> <a href="#" data-image="assets/images/products/product4.jpg" data-zoom-image="assets/images/products/product4.jpg"> <img id="product-zoom" src="assets/images/products/product4.jpg" alt="product-image" /> </a></div>
+                                                                <div class="more-views-items"> <a href="#" data-image="assets/images/products/product5.jpg" data-zoom-image="assets/images/products/product5.jpg"> <img id="product-zoom" src="assets/images/products/product5.jpg" alt="product-image" /> </a> </div>
+                                                                <div class="more-views-items"> <a href="#" data-image="assets/images/products/product6.jpg" data-zoom-image="assets/images/products/product6.jpg"> <img id="product-zoom" src="assets/images/products/product6.jpg" alt="product-image" /> </a></div>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -52,7 +52,7 @@
                                         <div class="product-shop col-lg-7 col-sm-6 col-xs-12">
                                             <div class="product-next-prev"> <a class="product-next" href="#"><span></span></a> <a class="product-prev" href="#"><span></span></a> </div>
                                             <div class="product-name">
-                                                <h1>@Model.ProductName</h1>
+                                                <h1>Chaise Lounge</h1>
                                             </div>
                                             <div class="ratings">
                                                 <div class="rating-box">
@@ -569,4 +569,4 @@
         </div>
     </div>
 </section>
-<!-- Main Container End -->
+<!-- Main Container End --> 
