add view insert customer

--- a/Vanp.Web/Views/Shared/_Layout.cshtml
+++ b/Vanp.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,600,500,700,800' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
 
-
+    @RenderSection("css", required: false)
 </head>
 <body>
     <div id="page">
