update view insert product

--- a/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
@@ -5,7 +5,7 @@
 }
 <link href="~/Content/layout/css/layout.css" rel="stylesheet" />
 <link href="~/Content/layout/themes/light.css" rel="stylesheet" />
-
+@RenderSection("css",required:false)
 <div class="page-container">
     <div class="page-sidebar navbar-collapse collapse">
         <!-- BEGIN SIDEBAR MENU -->
