--- a/Vanp.Web/Views/Product/Add.cshtml
+++ b/Vanp.Web/Views/Product/Add.cshtml
@@ -61,9 +61,9 @@
                             <div class="row">
                                 <div class="col-md-8">
                                     <p class="title-text">Danh mục<span>*</span></p>
-                                    <p class="comment-form-email">
+                                    @*<p class="comment-form-email">
                                         @Html.DropDownList("CategoryId", Html.GetNameCat(), new { @class = "col-md-4 selectpicker", @name = "CategoryId" })
-                                    </p>
+                                    </p>*@
                                 </div>
                             </div>
                             <div class="row">
