--- a/Vanp.Web/Areas/Customer/Views/CProduct/Insert.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/CProduct/Insert.cshtml
@@ -3,26 +3,58 @@
     ViewBag.Title = "Insert";
     Layout = "~/Areas/Customer/Views/Shared/_CustomerLayout.cshtml";
 }
-
+<style>
+    .lie {
+        color: red;
+    }
+</style>
 <form>
-    <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+    <div class="row">
+        <div class="form-group col-md-4">
+            <label for="productname">Tên sản phẩm <span class="lie">*</span></label>
+            <input type="text" name="ProductName" class="form-control" id="productname" placeholder="Canon">
+        </div>
+        <div class="form-group col-md-4">
+            <label for="desription">Mô tả <span class="lie">*</span></label>
+            <input type="text" name="ProductDescription" class="form-control" id="desription" placeholder="Nhỏ gọn....">
+        </div>
+    </div>
+    <div class="row">
+        <div class="form-group col-md-4">
+            <label for="pricedefault">Giá sản phẩm <span class="lie">*</span></label>
+            <input type="text" name="PriceDefault" class="form-control" id="pricedefault" placeholder="2000000">
+        </div>
+        <div class="form-group col-md-4">
+            <label for="price">Giá mua ngay <span class="lie">*</span></label>
+            <input type="text" name="Price" class="form-control" id="price" placeholder="3000000">
+        </div>
+    </div>
+    <div class="row">
+        <div class="dropdown col-md-4">
+            <select class="form-control" name="CategoryId">
+                @foreach(var c in ViewBag.listCat)
+               <option></option>
+            </select>
+        </div>
+    </div>
+    <div class="row">
+        <div class="form-group col-md-4">
+            <label for="exampleInputFile">Hình ảnh 1</label>
+            <input type="file" id="exampleInputFile">
+        </div>
+        <div class="form-group col-md-4">
+            <label for="exampleInputFile">Hình ảnh 2</label>
+            <input type="file" id="exampleInputFile">
+        </div>
+        <div class="form-group col-md-4">
+            <label for="exampleInputFile">Hình ảnh 3</label>
+            <input type="file" id="exampleInputFile">
+        </div>
     </div>
     <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <label for="producttext">Mô tả chi tiết:</label>
+        <textarea name="ProductText"></textarea>
     </div>
-    <div class="form-group">
-        <label for="exampleInputFile">File input</label>
-        <input type="file" id="exampleInputFile">
-        <p class="help-block">Example block-level help text here.</p>
-    </div>
-    <div class="checkbox">
-        <label>
-            <input type="checkbox"> Check me out
-        </label>
-    </div>
+
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
-
