--- a/Vanp.Web/Views/View.cshtml
+++ b/Vanp.Web/Views/View.cshtml
@@ -1,8 +1,6 @@
-﻿
-@{
-    ViewBag.Title = "View";
-    Layout = "~/Areas/Customer/Views/Shared/_CustomerLayout.cshtml";
-}
-
-<h2>View</h2>
-
+﻿<header>
+    VANP
+</header>
+<footer>
+    Cám ơn bạn đã tham gia hệ thống của chúng tôi
+</footer>
